swagger settings
