# PersonnelAPI/src/routes/auth.router.js
@@ -18,8 +18,8 @@ const auth = require("../controllers/auth.controller");
 
 // Login/logout:
 router.post("/login", auth.login);
-router.all("/logout", auth.logout);
-
+// router.all("/logout", auth.logout); //swaggger all methodunu desteklemez
+router.get("/logout", auth.logout);
 
 
 /* ------------------------------------------------------- */
